Running ansible-files folder

--- a/variables.yaml
+++ b/variables.yaml
@@ -1,3 +1,6 @@
 Course: Realtime Devops with AWS
 Trainer: Sivakumar
 Duration: 110 hrs
+
+PERSON: "Siva from another file"
+WISHES: "Morning from another file"
