--- a/14-install-packages.yaml
+++ b/14-install-packages.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: install packages
-    ansible.builtin.packages:
+    ansible.builtin.package:
      name: "{{item}}" #item is a default keyword
      state: present
     loop:
